removing the unwanted logs
